--- a/src/app/globals.css
+++ b/src/app/globals.css
@@ -71,6 +71,10 @@ body {
   @apply bg-black hover:bg-black/80 text-white font-semibold py-3 md:py-5 px-4 rounded-lg md:rounded-2xl transition-all;
 }
 
+.btn-danger {
+  @apply bg-red-500 hover:bg-red-700 text-white  py-2  px-4 transition-all;
+}
+
 .borderr {
   @apply border border-red-900 border-solid;
 }
